k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: a2w-lucas
  labels:
    app: a2w-lucas
